--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+  <button class="reset">RESET</button>
   <div class="column-container">
     <div class="column">
       <div class="container left">
@@ -20,6 +21,7 @@
       <div class="column-header">Coffee Producers</div>
       <div class="container right" id="producer_container">
       </div>
+    </div>
     </div>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="script.js"></script>
