added increase coffee per click button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div class="counter-container">Coffee: <span id="coffee_counter">0</span></div>
         <div class="cps-container"><span id="cps">0</span> coffee/second</div>
         <div id="big_coffee">☕️</div>
+        <div id="extra_cpc">Increase Click Power!<br> Cost: 200</div>
+        <div id="cpc_container"><span id="cpc">1</span> coffee/click</div>
       </div>
     </div>
     <div class="column">
